@@ -1,8 +1,9 @@
 # Changes in version 0.1.5
 
-o ADD: basic retrieval-augmented generation in the `rag` function
+o ADD: basic retrieval-augmented generation in the `rag` function (includes LLAMA-2, Mistral-7B, TinyLLAMA)
 
-o ADD: sentiment analysis for images and videos with faces in `image_scores` and `video_scores` (respectively
+o ADD: sentiment analysis for images and videos with faces in `image_scores` and `video_scores` (respectively)
+
 
 # Changes in version 0.1.2
 
